--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
         <li class="menu-concept">
           <a href="#">Conception</a>
           <ul class="submenu">
-            <li><a href="#">TP1 - MCD - Immobilier</a></li>
-            <li><a href="#">TP2 - MCD - Bibliotheque</a></li>
-            <li><a href="#">TP3 - MCD - Casse Automobile</a></li>
+            <li><a href="">TP1 - MCD - Immobilier</a></li>
+            <li><a href="">TP2 - MCD - Bibliotheque</a></li>
+            <li><a href="">TP3 - MCD - Casse Automobile</a></li>
           </ul>
         </li>
 
@@ -49,8 +49,8 @@
           <ul class="submenu">
             <li><a href="">Mission 1</a></li>
             <li><a href="">Mission 2</a></li>
-            <li><a href="MISSION_3.pdf">Mission 3</a></li>
-            <li><a href="#">Mission 4</a></li>
+            <li><a href="">Mission 3</a></li>
+            <li><a href="">Mission 4</a></li>
           </ul>
         </li>
         
