--- a/Mission1/Mission1.html
+++ b/Mission1/Mission1.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="stylem1.css" />
-    <title id="Protfolio">Portfolio M2</title>
+    <title id="Portfolio">Portfolio M2</title>
   </head>
   <body> 
-<div id="bandeau"><h1>Mission 2</h1></div>
+<div id="bandeau"><h1>Mission 1</h1></div>
 <div id="menu">
 	<h1>Menu</h1>
 	<br />
