--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <a href="#">Mission</a>
           <ul class="submenu">
             <li><a href="Mission1/Mission1.html">Mission 1</a></li>
-            <li><a href="">Mission 2</a></li>
+            <li><a href="Mission2/Mission2.html">Mission 2</a></li>
             <li><a href="">Mission 3</a></li>
             <li><a href="">Mission 4</a></li>
           </ul>
