--- a/Mission1/Mission1.html
+++ b/Mission1/Mission1.html
@@ -41,7 +41,7 @@
 	
 	<p>En 2022, j'ai obtenu mon Bac technologique STI2D et j'ai mon brevet.</p>
 	
-	<p>Je m'intéresse à l'informatique depuis mon enfance et j'ai développé d'excellentes compétences dans ce domaine. Je maîtrise plusieurs langages de programmation tels que HTML/CSS, PHP et Python, ainsi que des bases de données SQL et des scripts tels que PowerShell et BaSH. J'ai travaillé avec des appareils tels que Cisco et Stormshield, et je suis familier avec les réseaux et la cybersécurité.</p>
+	<p>Je m'intéresse à l'informatique depuis mon enfance et j'ai développé d'excellentes compétences dans ce domaine. Je maîtrise plusieurs langages de programmation tels que HTML/CSS, PHP et Pythonje suis familier avec les réseaux et la cybersécurité ainsi que des bases de données SQL. J'ai aussi travaillé avec des appareils tels que Cisco et .</p>
 
 	<p>Je suis une personne avec un mental positif , j'ai une très bonne capacité d'adaptation et j'adore travailler en équipe. Je parle également couramment l'anglais.</p>
 	
