--- a/Mission2/Mission2.html
+++ b/Mission2/Mission2.html
@@ -14,12 +14,11 @@
             <br>
         </p>
         <br>
-        <h3>Cenre des factures</h3>
+        <h3>Centre des factures</h3>
         <p>54 allée les bleus, Paris 75000<br>
             <br>
             Kylian Guyomard <br>
             guyomardkylian@gmail.com<br>
-            SIRET : FR563 251 458 00013
         </p>         
 
 
@@ -49,10 +48,10 @@
     <center>
     <table id="table_inv">
       <tr>
-        <td class="tdescription"> DESCRIPTION</td>
-        <td class="tqpt">QUANTITE</td>
-        <td class="tqpt">PRIX UNITAIRE</td>
-        <td class="tqpt">TOTAL</td>
+        <td class="tdescription"> description</td>
+        <td class="tqpt">quantité</td>
+        <td class="tqpt">prix à l'unité</td>
+        <td class="tqpt">total</td>
       </tr>
       <tr id="modeleLigne">
         <td ><input type="text" name="desc" class="input desc" placeholder="Description" ></td>
@@ -85,7 +84,7 @@
 
       <table class="calcul">
         <tr>
-          <td class="format"> SOUS-TOTAL :</td>
+          <td class="format">pri total :</td>
           <td class="total"><input type="text" name="soustotal" id="soustotal" ></td>
         </tr>
        </div>
@@ -96,23 +95,23 @@
       <table class="calcul">
 
         <tr>
-          <td class="format">REMISE :</td>
+          <td class="format">Remise :</td>
           <td class="total"><input type="text" name="remise" id="remise" value="10"></td>
         </tr>
         <tr>
-          <td class="format">SANS LES REMISES :</td>
+          <td class="format">Sans remises :</td>
           <td class="total"><input type="text" name="sremise" id="sremise"></td>
         </tr>
         <tr>
-          <td class="format">TAUX D'IMPOSTION :</td>
+          <td class="format">Taux d'imposition :</td>
           <td class="total"><input type="text" name="tauximpo" id="tauximpo" value="20"></td>
         </tr>
         <tr>
-          <td class="format">TAXE TOTALE :</td>
+          <td class="format">Tax totale :</td>
           <td class="total"><input type="text" name="taxetotal" id="taxetotal" ></td>
         </tr>
         <tr>
-          <td class="format">EXPEDITON MANUTENTION :</td>
+          <td class="format">Manutenion :</td>
           <td class="total"><input type="text" name="expi" id="expi" value="20"></td>
         </tr>
         <tr>
@@ -120,7 +119,7 @@
           <td class="total"></td>
         </tr>
         <tr>
-          <td class="formatmax">SOLDE DUE : </td>
+          <td class="formatmax">Solde du : </td>
           <td class="totalmax"><input type="text" class="totalmax" name="totalall" id="totalall"></td>
         </tr>
       </table>
