--- a/Mission2/Mission2.html
+++ b/Mission2/Mission2.html
@@ -8,7 +8,7 @@
     </head>
     <body>
     <div id="header">
-        <img class="logo" src="LOGO.png">
+        <img class="logo" src="logo.png">
         <p class="rightheader" >
             <br>
             <br>
