--- a/Mission2/Mission2.html
+++ b/Mission2/Mission2.html
@@ -84,7 +84,7 @@
 
       <table class="calcul">
         <tr>
-          <td class="format">pri total :</td>
+          <td class="format">prix total :</td>
           <td class="total"><input type="text" name="soustotal" id="soustotal" ></td>
         </tr>
        </div>
